--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MAnalytics</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+ <title>MAnalytics</title>
+ <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+ <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+ <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+   <div class="container">
+
+      <div class="pull-right user-info">
+         <% if current_user %>
+             Hello <%= current_user.name %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+         <% else %>
+            <%= link_to "Sign In", new_user_session_path %>
+         <% end %>
+      </div>
+
+      <% if flash[:notice] %>
+         <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:notice] %>
+         </div>
+      <% elsif flash[:error] %>
+         <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:error] %>
+         </div>
+      <% elsif flash[:alert] %>
+         <div class="alert">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:alert] %>
+         </div>
+      <% end %>
+
+      <%= yield %>
+
+   </div>
+
 
 </body>
 </html>
