--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-8">
+
   <h1><%= @site.name %></h1>
   <h3><%= @site.url %></h3>
   <div class="col-md-4 new-edit">
@@ -11,7 +12,9 @@
 <div class="col-md-8">
   
   <% @events.each do |event| %>
+
     <br/><%= event.name %>
+    <br/><%= event.property_1 %>
   <% end %>
   <% if @events.empty? %>No Events to show<% end %>
 
